--- a/statistik2.html
+++ b/statistik2.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<style>
-		body{margin: 0;}
-	</style>	
 	
 </head>
-<body>
+<body style="margin:0">
 
 <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
 <!-- Histats.com  START  (aync)-->
