--- a/statistik2.html
+++ b/statistik2.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<style>
+		body {
+    			display: block;
+    			margin: 8px;
+    			margin-top: 8px;
+    			margin-right: 8px;
+    			margin-bottom: 8px;
+    			margin-left: 8px;
+		}
+	</style>
 	
 </head>
-<body style="margin:0">
+<body>
 
 <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
 <!-- Histats.com  START  (aync)-->
