--- a/statistik2.html
+++ b/statistik2.html
@@ -4,11 +4,8 @@
 	<style>
 		body {
     			display: block;
-    			margin: 8px;
-    			margin-top: 8px;
-    			margin-right: 8px;
-    			margin-bottom: 8px;
-    			margin-left: 8px;
+    			margin: 0;
+    			
 		}
 	</style>
 	
